# reporting-api-v1

./: .gitignore  Cargo.toml  README.md
migrations/: 2023091902_rav2.sql  2023091903_rav2.sql  2023091904_rav2.sql  20230919_rav2.sql  2023092001_rav2.sql
reports/: report-Amic Trading (Pty) Ltd-2023-10-29-14-33-23.json  report-Amic Trading (Pty) Ltd-2023-10-29-14-37-47.json
src/: main.rs
src/documentation/: openapi.rs
src/functions/: mod.rs
src/functions/cybercns/: agents.rs  assets.rs  external_scan.rs  mod.rs  vulnerabilities.rs
src/functions/rocketcyber/: accounts.rs  agents.rs  incidents.rs  mod.rs
src/functions/spanning/: spanning_backups.rs
src/functions/veeam/: mod.rs  veeam_agents.rs  veeam_agents_jobs.rs  veeam_servers.rs  veeam_servers_jobs.rs
src/functions/vsa/: agents.rs  devices.rs  disks.rs  groups.rs  mod.rs  patches.rs  security_products.rs  tickets.rs
src/jobs/: cyber_cns.rs  fifth_minute_job.rs  hour_job.rs  mod.rs  rocket_cyber.rs  spanning.rs  veeam.rs  vsa.rs
src/models/: mod.rs
src/models/cybercns/: agent.rs  asset.rs  company.rs  host.rs  mod.rs  security_report_card.rs  security_report_card_evidence.rs  vulnerability.rs
src/models/rocketcyber/: account.rs  agent.rs  incident.rs  mod.rs
src/models/spanning/: mod.rs  spanning.rs
src/models/tenant/: mod.rs  tenant_external_scan_hostname.rs
src/models/veeam/: mod.rs  veeam_agent.rs  veeam_agent_job.rs  veeam_server.rs  veeam_server_job.rs
src/models/vsa/: agent.rs  mod.rs  tickets.rs
src/routes/: mod.rs  router.rs
src/routes/cybercns/: agents.rs  assets.rs  mod.rs  (+2 more)
(+46 files in other folders)
