[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["multipart", "headers"] }
bigdecimal = { version = "0.4.1", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
cron = "0.12.0"
dotenv = "0.15.0"
libmath = "0.2.1"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "chrono",
] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-cron-scheduler = "0.9.4"
tokio-util = { version = "0.7.9", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.4", features = [
    "add-extension",
    "trace",
    "cors",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utoipa = { version = "4.0.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
uuid = "1.4.1"
